fix ampersand in bookmark keyworded search string not getting URL encoded properly (bug 326532)